Wide dashed bond drawing

--- a/examples/svgFeatures.html
+++ b/examples/svgFeatures.html
@@ -19,12 +19,12 @@ var all = [
  ["Reagent vertical centring", "3\\$C()</OH>|$C()`/`\\`|/   + K2Cr2O7 + 4H2SO4 -->  3\\$C()<//O>|$C()`/`\\`|/ + Cr2(SO4)3 + K2SO4 + 7H2O"],
  ["Mineral charoite", "(K,Sr)'15-16'(Ca,Na)32[Si6O11(O,OH)6]2[Si12O18(O,OH)12]2[Si14O25(O,OH)18]2(OH,F)4*3H2O"],
 
- ["Bond styles", `$L(1.4)-<|~S>-<|hH>-<_(A90,SI)"w">-<_(A90,w2)"w">-<_(A90,S:|)":i">-<_(A90,S|:){i:}>-<_(A90,S|I:){-w:}>-<||x"x">-<|w"v">-<|d"_">-`],
+ ["Bond styles", `$L(1.4)-<|~S>-<|hH>-<_(A90,SI)"w">-<_(A90,w2)"w">-<_(A90,S:|)":i">-<_(A90,S|:){i:}>-<_(A90,S|I:){-w:}>-<||x"x">-<|w"v">-<|d"_">-<_(A90,d2)"=">-`],
  ["Coordination bonds", "$L(1.5)H`|vvO--vvvO<|hvH>--~v"],
  ["Delocalized bond as ring", "/\\</>|`/`\\`|_o"],
  ["Non-ring delocalized bond", "_(x2)\\<->`/_(x-2)`\\/_s() + /\\</>|`/`\\`|_s(S:) + -\\<->`/`-_s(S:) + $slope(45)-\\|`/`-`\\`|/_s(#1;2;5;6;1)"],
- ["Middle points", "H2C`|H2C`|H2C_m(x2)_m(y2)_(x-2,C)"],
- ["Auto align", "`\\\\`/||\\</>||<\\>`/<`>`\\\\`|`\\\\`/||<\\|O`|/>`/`\\\\`|<`\\>//<`|>\\"],
+ ["Middle points", "H2C`|H2C`|H2C_m(x2)_m(y2)_(x-2)"],
+ ["Auto align of double bonds", "`\\\\`/||\\</>||<\\>`/<`>`\\\\`|`\\\\`/||<\\|O`|/>`/`\\\\`|<`\\>//<`|>\\"],
 
  ["Text brackets", "(HC<-OH>)'n'|[C<=O>]'m'|{{HC<-C%N>}}'x'"],
  ["Brackets with hard bonds", "/[<`|CH3>\\]'n'/"],
