Markup functions, support of markup by testFormula and structBuilder

--- a/examples/svgFeatures.html
+++ b/examples/svgFeatures.html
@@ -40,6 +40,8 @@ var all = [
  ["Overlapped backgrounds", "H2N-C<`|H><-$bg(yellow,to:1;3,padding:.2)COOH>|S|C<|$bg(to:3,rgba(0,255,255,0.4),p:.4;.2;.1)H><-NH2>`-HOOC"],
  ["Background for agent", "`-<_(a54)HO>_q<_(a54)H3C>_q<||O>_q<_(a54)NH2>_q_(a54)$itemColor1(#C00){R}$background(#FFA,*,ellipse,p:-.5)"],
 
+ ["Rich text elements", '$C(){R^1}\\|$C()O`|/{R^2} "{\\color{blue}H}_2SO_4"--> '],
+
  ["Invalid version", "$ver(100)H2O"],
 ];
 
