First adaptation to CCEditor

--- a/examples/svgFeatures.html
+++ b/examples/svgFeatures.html
@@ -31,7 +31,8 @@ var all = [
  ["Brackets with hard bonds", "$padding(0, 0.2, 0.2, 0.1)/[<`|CH3>\\]'n'/"],
  ["Brackets with soft bonds", "H2N-(CH2)'x'-C<//O>\\OH + CH3-CH-CH3;#2|OH --> $C()H2N-(CH2)'x'-C<//O>\\O-CH-CH3;#6|CH3 + H2O"],
  ["Small brackets", "`\\()`'q'`|N<`\\`|{X}|`/()'n'`\\{Y}>/\\N|()'p'`/_(A45)()'m'_p4N<_(y.5)H>_p4()`'o'_p4"],
- ["Brackets", "[H|N^+<`/H><_(A75,w+)H><\\dH>]3^+[P<`||O><`/O`^-><_(A75,w+)O^-><_(A20,d+)O^->]^3-"],
+ ["Connected brackets", "[H|N^+<`/H><_(A75,w+)H><\\dH>]3^+[P<`||O><`/O`^-><_(A75,w+)O^-><_(A20,d+)O^->]^3-"],
+ ["Brackets and reverse connection", "P<_(A160,d+)N_(h-)(CH3)2><_(A110,L1.3,w+)N_(h-)(CH3)2>\\N(CH3)2"],
 
  ["Multiplier", "CuSO4*5H2O"],
  ["Complex multiplier", "$ver(2.0)[$slope(45)Cu/O\\S/O`/\\O`\\`/O`\\]*5[O<`|H>|H]"],
