Lewis dot structures

--- a/examples/svgFeatures.html
+++ b/examples/svgFeatures.html
@@ -43,6 +43,13 @@ var all = [
 
  ["Rich text elements", '$C(){R^1}\\|$C()O`|/{R^2} "{\\color{blue}H}_2SO_4"--> '],
 
+ ["Lewis structures", 
+   '$itemColor(blue)$dots(m:.03,-65,-115,m:.1,-30,-150)$C()I$itemColor(green)<`|$dots(LTR)Cl><`/$dots(TlLDRd)Cl><\\$dots(TrRDLd)Cl>$itemColor()' + 
+   ' + H_(x.8,N0)$dots(m:.1,!)C<_(y-.9,N0)H><_(y.9,N0)H>_(x.8,N0)$dots(m:.1,TD)C<_(y-1,N0)$dots(LRT)Br><_(y.9,N0)H>_(x.8,N0)$dots(m:.1,!)C<_(y-.9,N0)H><_(y.9,N0)H>_(x.8,N0)H' +
+   ' + $dots(ULD)F_(x%d:.8,N0)$dots(c:#0F0,ULR)Al<_(y-%d,N0)$dots(LUR)F>_(x%d,N0)$dots(URD)F' +
+   ' + $dots(LUD)F-C<|$dots(LDR)F>=$dots(U)N-$dots(URD)F'
+  ],
+
  ["Invalid version", "$ver(100)H2O"],
 ];
 
