Node charge position

--- a/examples/svgFeatures.html
+++ b/examples/svgFeatures.html
@@ -50,6 +50,8 @@ var all = [
    ' + $dots(LUD)F-C<|$dots(LDR)F>=$dots(U)N-$dots(URD)F'
   ],
 
+ ["Charge position", '//<`|@:n(n,o)N&n^+<_qq6O>_p6O&o^-@($pos(-90))>\\</@n()>||<\\@n($pos(RB))>`/<|@n(,`)>`\\\\<`/@n($pos(LB),`)>`|`\\@n()'],
+
  ["Invalid version", "$ver(100)H2O"],
 ];
 
