--- a/examples/autoCompileCanvas.html
+++ b/examples/autoCompileCanvas.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <script src="../lib/charchem2.js"></script>
-        <link href="charchem.css" rel="stylesheet" />
+        <link href="../src/charchem.css" rel="stylesheet" />
     </head>
     <body class="echem-auto-compile" data-drawsys="canvas" data-usetext="no">
         <h2>Potassium ferrocyanide</h2>
