--- a/examples/autoCompile.html
+++ b/examples/autoCompile.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <script src="../lib/charchem2.js"></script>
-        <link href="../src/charchem.css" rel="stylesheet" />
+        <link href="../static/charchem.css" rel="stylesheet" />
         <meta class="CharChemConfig" />
     </head>
     <body>
