--- a/examples/table.html
+++ b/examples/table.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Periodic Table demo</title>
-        <link href="../src/charchem.css" rel="stylesheet" />
+        <link href="../static/charchem.css" rel="stylesheet" />
         <script src="../lib/charchem2.js"></script>
 
         <style type="text/css">
