--- a/examples/svgFeatures.html
+++ b/examples/svgFeatures.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <title>CharChem 2.0 SVG features</title>
-<link href="../src/charchem.css" type="text/css" rel="stylesheet" />
+<link href="../static/charchem.css" type="text/css" rel="stylesheet" />
 <style>
 #mainList {
     display: grid; 
